--- a/styles/sass/_mixins.scss
+++ b/styles/sass/_mixins.scss
@@ -22,6 +22,7 @@
   &.fadeIn {
     transform: translateX(0);
     filter: opacity(1);
+    backdrop-filter: blur(5px);
   }
 }
 
@@ -32,6 +33,7 @@
   &.fadeIn {
     transform: translateX(0);
     filter: opacity(1);
+    backdrop-filter: blur(5px);
   }
 }
 
@@ -42,6 +44,7 @@
   &.fadeIn {
     transform: translateY(0);
     filter: opacity(1);
+    backdrop-filter: blur(5px);
   }
 }
 
