--- a/app/LayoutComponents/NavBar.module.scss
+++ b/app/LayoutComponents/NavBar.module.scss
@@ -69,6 +69,14 @@
           filter: opacity(0.75);
           transform: translateY(1px);
         }
+        @include screen-tablet-sm {
+          background-image: linear-gradient(
+            to bottom,
+            rgba($color-dark, 1) 20%,
+            rgba($color-med, 0.95)
+          );
+          border: 1px solid rgba($color-light, 0.35);
+        }
         @include screen-mobile-lg {
           display: none;
         }
