--- a/app/PageComponents/FeatureText.module.scss
+++ b/app/PageComponents/FeatureText.module.scss
@@ -11,9 +11,12 @@
     position: absolute;
     width: 100%;
     height: 20rem;
-    background-color: rgba($color-dark, 0.5);
+    background-image: linear-gradient(
+      to bottom,
+      rgba($color-dark, 1),
+      rgba($color-med, 0.75)
+    );
     border-radius: $box-border-radius;
-    backdrop-filter: blur(5px);
     border: 1px solid rgba($color-light, 0.2);
     box-shadow: 0 2px 15px rgba($color-dark, 0.5);
     padding: 4rem;
@@ -24,8 +27,6 @@
     align-items: center;
   }
   @include screen-tablet-sm {
-    background-color: rgba($color-dark, 0.6);
-    backdrop-filter: blur(25px);
     padding: 2.5rem;
     height: 15rem;
     font-size: 2.5rem;
