--- a/app/PageComponents/Showroom.module.scss
+++ b/app/PageComponents/Showroom.module.scss
@@ -36,8 +36,6 @@
     justify-content: space-around;
     width: 100%;
     height: 20rem;
-    background-color: rgba($color-dark, 0.5);
-    backdrop-filter: blur(10px);
     border-radius: $box-border-radius;
     border: 1px solid rgba($color-light, 0.2);
     box-shadow: 0 2px 15px rgba($color-dark, 0.5);
@@ -57,6 +55,11 @@
     }
     @include safari-overflow;
     &.glasses {
+      background-image: linear-gradient(
+        to bottom right,
+        rgba($color-dark, 1),
+        rgba($color-med, 0.75)
+      );
       grid-area: glasses;
       @include fadeInRight;
       @include screen-tablet-lg {
@@ -68,6 +71,11 @@
       }
     }
     &.jacket {
+      background-image: linear-gradient(
+        to bottom left,
+        rgba($color-dark, 1),
+        rgba($color-med, 0.75)
+      );
       grid-area: jacket;
       @include fadeInLeft;
       @include screen-tablet-lg {
@@ -80,6 +88,11 @@
       }
     }
     &.pants {
+      background-image: linear-gradient(
+        to bottom right,
+        rgba($color-dark, 1),
+        rgba($color-med, 0.75)
+      );
       grid-area: pants;
       @include fadeInRight;
       @include screen-tablet-lg {
@@ -91,6 +104,11 @@
       }
     }
     &.shoes {
+      background-image: linear-gradient(
+        to bottom left,
+        rgba($color-dark, 1),
+        rgba($color-med, 0.75)
+      );
       grid-area: shoes;
       @include fadeInLeft;
       @include screen-tablet-lg {
