--- a/app/PageComponents/StartBtn.module.scss
+++ b/app/PageComponents/StartBtn.module.scss
@@ -15,14 +15,15 @@
     filter: opacity(0.75);
     transform: translateY(1px);
   }
-  @include screen-mobile-lg {
+  @include screen-tablet-sm {
     background-image: linear-gradient(
       to bottom,
-      rgba($color-dark, 0.75) 50%,
-      rgba($color-dark, 0)
+      rgba($color-dark, 1) 20%,
+      rgba($color-med, 0.95)
     );
     font-size: 3.5rem;
     padding: 2.5rem 3.5rem;
     border-radius: $box-border-radius;
+    border: 1px solid rgba($color-light, 0.35);
   }
 }
