--- a/styles/sass/_base.scss
+++ b/styles/sass/_base.scss
@@ -16,6 +16,7 @@ html {
 body {
   background-image: linear-gradient(to top, $color-dark, rgba($color-med, 0)),
     linear-gradient(to bottom right, $color-dark, rgba($color-med, 1));
+  min-height: 100vh;
 }
 
 html,
