--- a/app/PageComponents/Loader.module.scss
+++ b/app/PageComponents/Loader.module.scss
@@ -5,10 +5,9 @@
   position: absolute;
   background-image: linear-gradient(to top, $color-dark, rgba($color-med, 0)),
     linear-gradient(to bottom right, $color-dark, rgba($color-med, 1));
-  width: 101vw;
-  height: 101vh;
-  top: -1px;
-  left: -1px;
+  width: 100vw;
+  height: 100vh;
+  z-index: 10000;
   .loadingBox {
     position: fixed;
     left: 50%;
@@ -31,7 +30,6 @@
     .textBox {
       position: fixed;
       top: 12rem;
-      //   left: 0;
       display: flex;
       flex-direction: column;
       justify-content: center;
