--- a/app/PageComponents/Hero.module.scss
+++ b/app/PageComponents/Hero.module.scss
@@ -108,7 +108,7 @@
       &:nth-child(1) {
         transform: translate(8rem, 6rem);
         z-index: 2;
-        animation: moveCardDownLeft 0.5s ease-out;
+        animation: moveCardDownLeft 0.5s ease-out 4.3s;
       }
       &:nth-child(2) {
         transform: translate(4rem, 3rem);
@@ -118,7 +118,7 @@
         }
       }
       &:nth-child(3) {
-        animation: moveCardUpRight 0.5s ease-out;
+        animation: moveCardUpRight 0.5s ease-out 4.3s;
         .border {
           animation-delay: 1s;
         }
