--- a/app/PageComponents/Loader.module.scss
+++ b/app/PageComponents/Loader.module.scss
@@ -2,7 +2,7 @@
 @import '/styles/sass/animations';
 
 .loadingOverlay {
-  position: absolute;
+  position: fixed;
   background-image: linear-gradient(to top, $color-dark, rgba($color-med, 0)),
     linear-gradient(to bottom right, $color-dark, rgba($color-med, 1));
   width: 100vw;
